--- a/src/client/src/components/DataTableContainer/DataTableContainer.css
+++ b/src/client/src/components/DataTableContainer/DataTableContainer.css
@@ -4,4 +4,5 @@
     align-items: center;
     justify-content: center;
     z-index: 1;
+    height: 50vh;
 }
